refactor: 간단한 수정 사항 리뷰 반영